Fixed styling to hide nav items in toolbar on small devices

--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -25,4 +25,7 @@
     .DesktopOnly {
         display: none;
     }
+    .NavigationItems {
+        display: none;
+    }
 }
